--- a/build.gradle
+++ b/build.gradle
@@ -29,4 +29,7 @@ dependencies {
 	//runtimeOnly 'mysql:mysql-connector-java'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	// web jar
+	compile group: 'org.webjars', name: 'jquery', version: '3.3.1'
 }
